[gd_scene load_steps=15 format=2]

[ext_resource path="res://scenes/player/player.gd" type="Script" id=1]
[ext_resource path="res://assets/mesh/playerMesh.glb" type="PackedScene" id=2]
[ext_resource path="res://assets/images/colors.jpg" type="Texture" id=3]
[ext_resource path="res://scenes/ui/ui.tscn" type="PackedScene" id=4]
[ext_resource path="res://assets/images/bubble.png" type="Texture" id=5]

[sub_resource type="SpatialMaterial" id=1]
flags_transparent = true
flags_unshaded = true
params_cull_mode = 1
params_grow = true
params_grow_amount = 0.05
albedo_color = Color( 0, 0, 0, 1 )

[sub_resource type="SpatialMaterial" id=2]
next_pass = SubResource( 1 )
albedo_texture = ExtResource( 3 )

[sub_resource type="Animation" id=3]
resource_name = "dive"
length = 0.45
step = 0.01
tracks/0/type = "transform"
tracks/0/path = NodePath("Armature/Skeleton:shin_l")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/keys = PoolRealArray(  )
tracks/1/type = "transform"
tracks/1/path = NodePath("Armature/Skeleton:thigh_l")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = true
tracks/1/enabled = true
tracks/1/keys = PoolRealArray( 0, 1, 0, 0, 0, 0.00804649, -0.000340955, 8.43186e-09, 0.999968, 1, 1, 1, 0.06, 1, -5.96046e-08, 8.9407e-08, 1.49012e-08, 0.00804655, -0.000340954, -1.10723e-09, 0.999968, 1, 1, 1, 0.13, 1, -2.98023e-08, 0, -7.45058e-09, 0.0538616, -0.00228226, -4.14605e-09, 0.998546, 1, 1, 1, 0.26, 1, -5.96046e-08, 0, -2.23517e-08, 0.214592, -0.00909286, -7.56902e-09, 0.976662, 1, 1, 1, 0.33, 1, -2.98023e-08, 0, -1.49012e-08, 0.29217, -0.0123801, -9.00853e-09, 0.956286, 1, 1, 1, 0.4, 1, -5.96046e-08, 5.96046e-08, 9.68575e-08, 0.344005, -0.0145764, -6.19986e-09, 0.938855, 1, 1, 1, 0.46, 1, -5.96046e-08, -2.68221e-07, 5.21541e-08, 0.354807, -0.0150341, 8.71727e-09, 0.934819, 1, 1, 1 )
tracks/2/type = "transform"
tracks/2/path = NodePath("Armature/Skeleton:thigh_r")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = true
tracks/2/enabled = true
tracks/2/keys = PoolRealArray( 0, 1, 0, 0, 0, -0.00757647, -0.000321046, -4.72812e-08, 0.999971, 1, 1, 1, 0.06, 1, 5.96046e-08, 8.9407e-08, -5.96046e-08, -0.00757644, -0.000321036, -5.75067e-09, 0.999971, 1, 1, 1, 0.13, 1, 5.96046e-08, 8.9407e-08, -5.96046e-08, -0.0506697, -0.00214701, -3.09627e-09, 0.998713, 1, 1, 1, 0.26, 1, 5.96046e-08, 5.96046e-08, -2.98023e-08, -0.201711, -0.008547, -4.1602e-09, 0.979408, 1, 1, 1, 0.33, 1, 2.98023e-08, 5.96046e-08, -2.98023e-08, -0.274825, -0.0116451, -2.17955e-09, 0.961424, 1, 1, 1, 0.4, 1, 5.96046e-08, 5.96046e-08, -2.98023e-08, -0.323876, -0.0137235, -4.6763e-09, 0.946, 1, 1, 1, 0.46, 1, 2.98023e-08, -2.98023e-08, 2.98023e-08, -0.334123, -0.0141577, -5.23757e-08, 0.942423, 1, 1, 1 )
tracks/3/type = "transform"
tracks/3/path = NodePath("Armature/Skeleton:hand_l")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = true
tracks/3/enabled = true
tracks/3/keys = PoolRealArray( 0, 1, 0, -5.96046e-08, 1.04308e-07, -1.49012e-08, -1.90536e-09, 2.13552e-08, 1, 1, 1, 1, 0.06, 1, 0, 0, 0, 0.00819739, 0.00283011, 0.00131392, 0.999962, 1, 1, 1, 0.13, 1, 3.47266e-08, -5.96046e-08, -2.98023e-08, 0.0549536, 0.0189725, 0.00880824, 0.99827, 1, 1, 1, 0.26, 1, -3.29903e-08, -1.78814e-07, 5.96046e-08, 0.219242, 0.0756923, 0.0351411, 0.972095, 1, 1, 1, 0.33, 1, -2.77806e-08, -4.17233e-07, -1.93715e-07, 0.29815, 0.102935, 0.047789, 0.947749, 1, 1, 1, 0.4, 1, -1.94471e-07, 1.78814e-07, 5.96046e-08, 0.350515, 0.121014, 0.0561823, 0.927005, 1, 1, 1, 0.46, 1, -5.68434e-14, 2.98023e-07, 1.04308e-07, 0.365159, 0.12607, 0.0585295, 0.920511, 1, 1, 1 )
tracks/4/type = "transform"
tracks/4/path = NodePath("Armature/Skeleton:fore_arm_l")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = true
tracks/4/enabled = true
tracks/4/keys = PoolRealArray( 0, 1, 0, 0, 0, -4.47035e-08, 7.82298e-09, 7.69237e-09, 1, 1, 1, 1, 0.06, 1, 2.38419e-08, 0, 0, 0.00635218, 0.000817246, -0.000702783, 0.999979, 1, 1, 1, 0.13, 1, -6.55651e-08, -1.19209e-07, -5.96046e-08, 0.0424001, 0.00545501, -0.0046911, 0.999075, 1, 1, 1, 0.26, 1, 8.9406e-09, -2.38419e-07, -1.19209e-07, 0.168498, 0.0216782, -0.0186425, 0.985287, 1, 1, 1, 0.33, 1, -1.01328e-07, -5.96046e-08, 0, 0.229918, 0.0295801, -0.0254379, 0.972428, 1, 1, 1, 0.4, 1, -1.49012e-07, -5.96046e-08, -2.98023e-08, 0.27148, 0.0349274, -0.0300364, 0.961341, 1, 1, 1, 0.46, 1, 8.9407e-08, -5.96046e-08, -2.98023e-08, 0.283252, 0.036442, -0.0313389, 0.95784, 1, 1, 1 )
tracks/5/type = "transform"
tracks/5/path = NodePath("Armature/Skeleton:upper_arm_l")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = true
tracks/5/enabled = true
tracks/5/keys = PoolRealArray( 0, 1, 0, 0, 0, -0.00257513, 0.00571835, 0.00873964, 0.999942, 1, 1, 1, 0.06, 1, 2.23517e-08, -2.98023e-08, -2.98023e-08, 0.0198367, 0.00441044, -0.0048566, 0.999782, 1, 1, 1, 0.13, 1, 2.23517e-08, -2.98023e-08, 2.98023e-08, 0.125941, 0.0290809, -0.0297744, 0.991164, 1, 1, 1, 0.2, 1, 2.98023e-08, 5.96046e-08, -4.47035e-08, 0.30227, 0.0705288, -0.070743, 0.947974, 1, 1, 1, 0.26, 1, 2.23517e-08, -2.98023e-08, -5.96046e-08, 0.502018, 0.117709, -0.11693, 0.848793, 1, 1, 1, 0.33, 1, 7.45058e-09, 2.98023e-08, 1.78814e-07, 0.655971, 0.154185, -0.152417, 0.722978, 1, 1, 1, 0.4, 1, 8.9407e-08, 0, -4.47035e-08, 0.738922, 0.173899, -0.171479, 0.627971, 1, 1, 1, 0.46, 1, 2.23517e-08, -2.98023e-08, -2.98023e-08, 0.759221, 0.178733, -0.176134, 0.600512, 1, 1, 1 )
tracks/6/type = "transform"
tracks/6/path = NodePath("Armature/Skeleton:shoulder_l")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = true
tracks/6/enabled = true
tracks/6/keys = PoolRealArray( 0, 1, 0, 0, 0, 0, -8.67362e-19, -1.74623e-10, 1, 1, 1, 1, 0.06, 1, 2.40377e-05, -0.006594, 0.00363934, 0.00747371, 1.92998e-05, -1.44041e-05, 0.999972, 1, 1, 1, 0.13, 1, 0.000159701, -0.0438036, 0.0241755, 0.0499721, 0.000129038, -9.62999e-05, 0.998751, 1, 1, 1, 0.26, 1, 0.000631949, -0.173331, 0.0956622, 0.198898, 0.000513585, -0.000383313, 0.98002, 1, 1, 1, 0.33, 1, 0.00086553, -0.237388, 0.131016, 0.271035, 0.000699857, -0.000522337, 0.962569, 1, 1, 1, 0.4, 1, 0.00102692, -0.281662, 0.155451, 0.319474, 0.000824942, -0.000615691, 0.947594, 1, 1, 1, 0.46, 1, 0.00107303, -0.29438, 0.16247, 0.333125, 0.00086019, -0.000641999, 0.942882, 1, 1, 1 )
tracks/7/type = "transform"
tracks/7/path = NodePath("Armature/Skeleton:hand_r")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = true
tracks/7/enabled = true
tracks/7/keys = PoolRealArray( 0, 1, -1.53383e-08, -2.38419e-07, 2.98023e-08, -4.47035e-08, -9.58522e-10, -4.31538e-09, 1, 1, 1, 1, 0.06, 1, -2.84217e-14, -2.38419e-07, 2.98023e-08, 0.00783934, 0.00269779, 0.00360494, 0.999959, 1, 1, 1, 0.13, 1, -2.10901e-08, -3.57628e-07, -2.98023e-08, 0.0525857, 0.0180964, 0.0241814, 0.99816, 1, 1, 1, 0.26, 1, 3.83514e-09, -2.38419e-07, 5.96046e-08, 0.20991, 0.0722364, 0.0965266, 0.970259, 1, 1, 1, 0.33, 1, 2.68417e-08, -4.17233e-07, -5.96046e-08, 0.285325, 0.0981888, 0.131206, 0.944317, 1, 1, 1, 0.4, 1, 4.21804e-08, -2.98023e-07, -1.49012e-07, 0.335233, 0.115364, 0.154156, 0.92225, 1, 1, 1, 0.46, 1, -9.5864e-08, -2.38419e-07, 5.96046e-08, 0.349165, 0.120158, 0.160563, 0.91535, 1, 1, 1 )
tracks/8/type = "transform"
tracks/8/path = NodePath("Armature/Skeleton:fore_arm_r")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = true
tracks/8/enabled = true
tracks/8/keys = PoolRealArray( 0, 1, 7.10543e-15, 5.96046e-08, -1.49012e-07, -1.49012e-08, -1.71886e-09, 5.86875e-09, 1, 1, 1, 1, 0.06, 1, 1.19209e-08, 0, -5.96046e-08, 0.00835712, 0.00136338, -0.0013602, 0.999963, 1, 1, 1, 0.13, 1, -8.04663e-08, 5.96046e-08, 0, 0.0560009, 0.00913592, -0.00911474, 0.998347, 1, 1, 1, 0.26, 1, -3.27825e-08, 5.96046e-08, 2.98023e-08, 0.223334, 0.0364345, -0.03635, 0.973382, 1, 1, 1, 0.33, 1, -6.85453e-08, -1.19209e-07, -8.9407e-08, 0.303816, 0.0495643, -0.0494493, 0.950155, 1, 1, 1, 0.4, 1, -9.23874e-08, -5.96046e-08, -1.49012e-07, 0.357329, 0.0582943, -0.0581591, 0.930341, 1, 1, 1, 0.46, 1, -4.47035e-08, 5.96046e-08, 2.98023e-08, 0.372312, 0.0607386, -0.0605978, 0.924133, 1, 1, 1 )
tracks/9/type = "transform"
tracks/9/path = NodePath("Armature/Skeleton:upper_arm_r")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = true
tracks/9/enabled = true
tracks/9/keys = PoolRealArray( 0, 1, 0, 0, 0, -0.000164849, 0.00417999, 0.00686412, 0.999968, 1, 1, 1, 0.06, 1, 7.45058e-09, 5.96046e-08, 7.45058e-08, 0.0166358, 0.003291, -0.00166791, 0.999855, 1, 1, 1, 0.13, 1, 0, -5.96046e-08, -2.98023e-08, 0.114325, 0.0225494, -0.0116285, 0.993119, 1, 1, 1, 0.2, 1, 9.68575e-08, 2.98023e-08, -1.49012e-08, 0.279147, 0.0550172, -0.0284961, 0.958247, 1, 1, 1, 0.26, 1, 0, -2.98023e-08, -1.49012e-08, 0.469024, 0.0924084, -0.0479578, 0.877027, 1, 1, 1, 0.33, 1, 1.49012e-08, 2.98023e-08, 2.98023e-08, 0.62128, 0.122385, -0.0635777, 0.771357, 1, 1, 1, 0.4, 1, 1.19209e-07, 2.98023e-08, 5.96046e-08, 0.707575, 0.139373, -0.0724381, 0.688959, 1, 1, 1, 0.46, 1, 0, 0, 0, 0.729361, 0.143661, -0.0746762, 0.664694, 1, 1, 1 )
tracks/10/type = "transform"
tracks/10/path = NodePath("Armature/Skeleton:shoulder_r")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = true
tracks/10/enabled = true
tracks/10/keys = PoolRealArray( 0, 1, 0, 0, 0, 8.9407e-08, -2.32831e-10, -2.32831e-10, 1, 1, 1, 1, 0.06, 1, 9.97966e-05, -0.024269, 0.0162488, 0.0336438, 3.88253e-05, -0.000148634, 0.999434, 1, 1, 1, 0.13, 1, 0.00056425, -0.137213, 0.0918681, 0.192794, 0.00022251, -0.000851732, 0.981239, 1, 1, 1, 0.2, 1, 0.00107465, -0.261359, 0.174987, 0.362279, 0.000418099, -0.00160049, 0.932068, 1, 1, 1, 0.26, 1, 0.00119948, -0.291695, 0.195298, 0.401152, 0.000462963, -0.00177223, 0.91601, 1, 1, 1 )
tracks/11/type = "transform"
tracks/11/path = NodePath("Armature/Skeleton:bone_1")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = true
tracks/11/enabled = true
tracks/11/keys = PoolRealArray( 0, 1, 0, 0, 0, 2.84217e-14, 0, 0, 1, 1, 1, 1, 0.06, 1, -0.0915025, 0.0407209, -1.32723e-07, 5.98435e-08, -6.43695e-08, -0.0229154, 0.999738, 1, 1, 1, 0.13, 1, -0.549014, 0.330091, -8.11672e-07, 1.85502e-07, -8.39342e-08, -0.152694, 0.988274, 1, 1, 1, 0.2, 1, -1.14378, 0.937839, -1.73571e-06, 4.54785e-07, -8.1427e-08, -0.359846, 0.933012, 1, 1, 1, 0.26, 1, -1.49835, 1.98902, -2.40976e-06, 8.14557e-07, -1.3981e-07, -0.598476, 0.801141, 1, 1, 1, 0.33, 1, -1.10589, 3.3951, -2.12317e-06, 9.42582e-07, -1.9965e-07, -0.845227, 0.534408, 1, 1, 1, 0.4, 1, -0.0347185, 4.67322, -8.83232e-07, -6.6232e-07, -9.14993e-08, 0.991405, -0.130828, 1, 1, 1, 0.46, 1, 0.403487, 5.08693, -3.5647e-07, -8.61348e-07, 3.18354e-07, 0.999827, 0.0185837, 1, 1, 1 )

[sub_resource type="Animation" id=4]
length = 0.8
loop = true
step = 0.01
tracks/0/type = "transform"
tracks/0/path = NodePath("Armature/Skeleton:thigh_l")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, 0, 0, 0, 7.45058e-09, -4.65661e-10, -5.82077e-10, 1, 1, 1, 1, 0.0666667, 1, 0, 0, 0, 0.0265401, -0.00112458, -3.36632e-09, 0.999647, 1, 1, 1, 0.133333, 1, 0, 0, 0, 0.0883263, -0.00374263, -2.10371e-09, 0.996085, 1, 1, 1, 0.266667, 1, 0, 0, 0, 0.255392, -0.0108217, -6.26163e-09, 0.966777, 1, 1, 1, 0.333333, 1, 0, 0, 0, 0.323287, -0.0136986, -8.12027e-09, 0.946202, 1, 1, 1, 0.4, 1, 0, 0, 0, 0.354807, -0.0150341, 7.47195e-10, 0.934819, 1, 1, 1, 0.466667, 1, 0, 0, 0, 0.344005, -0.0145764, 6.69585e-09, 0.938855, 1, 1, 1, 0.533333, 1, 0, 0, 0, 0.29217, -0.01238, 1.02259e-08, 0.956286, 1, 1, 1, 0.666667, 1, 0, 0, 0, 0.128178, -0.00543123, 1.10342e-08, 0.991736, 1, 1, 1, 0.733333, 1, 0, 0, 0, 0.0538615, -0.00228226, 1.29992e-08, 0.998546, 1, 1, 1, 0.8, 1, 0, 0, 0, 0.00804649, -0.000340955, 8.43186e-09, 0.999968, 1, 1, 1 )
tracks/1/type = "transform"
tracks/1/path = NodePath("Armature/Skeleton:thigh_r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = true
tracks/1/enabled = true
tracks/1/keys = PoolRealArray( 0, 1, 0, 0, 0, 1.49012e-08, -2.08167e-17, -1.39698e-09, 1, 1, 1, 1, 0.0666667, 1, 0, 0, 0, -0.0249786, -0.00105841, -5.17846e-09, 0.999687, 1, 1, 1, 0.133333, 1, 0, 0, 0, -0.0830591, -0.00351943, -2.57003e-09, 0.996538, 1, 1, 1, 0.266667, 1, 0, 0, 0, -0.240129, -0.0101749, -2.51855e-09, 0.970688, 1, 1, 1, 0.333333, 1, 0, 0, 0, -0.304244, -0.0128916, 1.2222e-09, 0.952507, 1, 1, 1, 0.4, 1, 0, 0, 0, -0.334123, -0.0141577, -3.06349e-08, 0.942423, 1, 1, 1, 0.466667, 1, 0, 0, 0, -0.323876, -0.0137235, -5.56234e-08, 0.946, 1, 1, 1, 0.533333, 1, 0, 0, 0, -0.274825, -0.0116451, -5.52154e-08, 0.961424, 1, 1, 1, 0.666667, 1, 0, 0, 0, -0.120496, -0.00510573, -5.55573e-08, 0.992701, 1, 1, 1, 0.733333, 1, 0, 0, 0, -0.0506696, -0.00214701, -5.68839e-08, 0.998713, 1, 1, 1, 0.8, 1, 0, 0, 0, -0.00757647, -0.000321046, -4.72812e-08, 0.999971, 1, 1, 1 )
tracks/2/type = "transform"
tracks/2/path = NodePath("Armature/Skeleton:hand_l")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/imported = true
tracks/2/enabled = true
tracks/2/keys = PoolRealArray( 0, 1, 0, 0, 0, -3.77598e-21, -2.16289e-10, -1.74651e-11, 1, 1, 1, 1, 0.8, 1, 0, -5.96046e-08, 1.04308e-07, -1.49012e-08, -1.90536e-09, 2.13552e-08, 1, 1, 1, 1 )
tracks/3/type = "transform"
tracks/3/path = NodePath("Armature/Skeleton:fore_arm_l")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/imported = true
tracks/3/enabled = true
tracks/3/keys = PoolRealArray( 0, 1, 0, 0, 0, 1.0116e-20, 1.02609e-10, -9.85949e-11, 1, 1, 1, 1, 0.8, 1, 0, 0, 0, -4.47035e-08, 7.82298e-09, 7.69237e-09, 1, 1, 1, 1 )
tracks/4/type = "transform"
tracks/4/path = NodePath("Armature/Skeleton:upper_arm_l")
tracks/4/interp = 1
tracks/4/loop_wrap = true
tracks/4/imported = true
tracks/4/enabled = true
tracks/4/keys = PoolRealArray( 0, 1, 0, 0, 0, -2.98023e-08, 5.55112e-16, -1.86265e-08, 1, 1, 1, 1, 0.0666667, 1, 0, 0, 0, 1.60745e-05, 0.0200997, 0.0261277, 0.999457, 1, 1, 1, 0.133333, 1, 0, 0, 0, 5.39083e-05, 0.0671689, 0.0873127, 0.993914, 1, 1, 1, 0.2, 1, 0, 0, 0, 0.000105024, 0.130774, 0.169993, 0.976729, 1, 1, 1, 0.266667, 1, 0, 0, 0, 0.000156122, 0.194346, 0.25263, 0.947844, 1, 1, 1, 0.333333, 1, 0, 0, 0, 0.000196747, 0.244919, 0.318369, 0.915782, 1, 1, 1, 0.4, 1, 0, 0, 0, 0.000215191, 0.267959, 0.348319, 0.898261, 1, 1, 1, 0.466667, 1, 0, 0, 0, -0.000335276, 0.259935, 0.338164, 0.904477, 1, 1, 1, 0.533333, 1, 0, 0, 0, -0.00211715, 0.221261, 0.288779, 0.931475, 1, 1, 1, 0.6, 1, 0, 0, 0, -0.00424984, 0.162503, 0.213456, 0.963333, 1, 1, 1, 0.666667, 1, 0, 0, 0, -0.00576989, 0.0964875, 0.128385, 0.987003, 1, 1, 1, 0.733333, 1, 0, 0, 0, -0.00541746, 0.0400043, 0.0547612, 0.997683, 1, 1, 1, 0.8, 1, 0, 0, 0, -0.00257513, 0.00571835, 0.00873964, 0.999942, 1, 1, 1 )
tracks/5/type = "transform"
tracks/5/path = NodePath("Armature/Skeleton:shoulder_l")
tracks/5/interp = 1
tracks/5/loop_wrap = true
tracks/5/imported = true
tracks/5/enabled = true
tracks/5/keys = PoolRealArray( 0, 1, 0, 0, 0, 0, -8.67362e-19, -1.74623e-10, 1, 1, 1, 1, 0.8, 1, 0, 0, 0, 0, -8.67362e-19, -1.74623e-10, 1, 1, 1, 1 )
tracks/6/type = "transform"
tracks/6/path = NodePath("Armature/Skeleton:hand_r")
tracks/6/interp = 1
tracks/6/loop_wrap = true
tracks/6/imported = true
tracks/6/enabled = true
tracks/6/keys = PoolRealArray( 0, 1, 0, 0, 0, -2.98023e-08, -5.65521e-11, 2.68407e-11, 1, 1, 1, 1, 0.8, 1, -1.53383e-08, -2.38419e-07, 2.98023e-08, -4.47035e-08, -9.58522e-10, -4.31538e-09, 1, 1, 1, 1 )
tracks/7/type = "transform"
tracks/7/path = NodePath("Armature/Skeleton:fore_arm_r")
tracks/7/interp = 1
tracks/7/loop_wrap = true
tracks/7/imported = true
tracks/7/enabled = true
tracks/7/keys = PoolRealArray( 0, 1, 0, 0, 0, 1.49012e-08, 9.41043e-11, 4.17728e-11, 1, 1, 1, 1, 0.8, 1, 7.10543e-15, 5.96046e-08, -1.49012e-07, -1.49012e-08, -1.71886e-09, 5.86875e-09, 1, 1, 1, 1 )
tracks/8/type = "transform"
tracks/8/path = NodePath("Armature/Skeleton:upper_arm_r")
tracks/8/interp = 1
tracks/8/loop_wrap = true
tracks/8/imported = true
tracks/8/enabled = true
tracks/8/keys = PoolRealArray( 0, 1, 0, 0, 0, -2.98023e-08, 1.49012e-08, -7.45058e-09, 1, 1, 1, 1, 0.0666667, 1, 0, 0, 0, -4.85976e-05, 0.0139279, 0.0226998, 0.999645, 1, 1, 1, 0.133333, 1, 0, 0, 0, -0.000161772, 0.0463542, 0.0755485, 0.996064, 1, 1, 1, 0.266667, 1, 0, 0, 0, -0.000467597, 0.134032, 0.218447, 0.9666, 1, 1, 1, 0.333333, 1, 0, 0, 0, -0.000591936, 0.169657, 0.276509, 0.945917, 1, 1, 1, 0.4, 1, 0, 0, 0, -0.000649617, 0.186193, 0.303459, 0.934476, 1, 1, 1, 0.466667, 1, 0, 0, 0, -0.000661503, 0.180525, 0.294232, 0.93853, 1, 1, 1, 0.533333, 1, 0, 0, 0, -0.00066777, 0.153322, 0.24993, 0.956048, 1, 1, 1, 0.666667, 1, 0, 0, 0, -0.000573042, 0.0672042, 0.109646, 0.991696, 1, 1, 1, 0.733333, 1, 0, 0, 0, -0.000415104, 0.0281875, 0.0460489, 0.998541, 1, 1, 1, 0.8, 1, 0, 0, 0, -0.000164849, 0.00417999, 0.00686412, 0.999968, 1, 1, 1 )
tracks/9/type = "transform"
tracks/9/path = NodePath("Armature/Skeleton:shoulder_r")
tracks/9/interp = 1
tracks/9/loop_wrap = true
tracks/9/imported = true
tracks/9/enabled = true
tracks/9/keys = PoolRealArray( 0, 1, 0, 0, 0, 1.19209e-07, -6.11181e-10, -4.36558e-10, 1, 1, 1, 1, 0.8, 1, 0, 0, 0, 8.9407e-08, -2.32831e-10, -2.32831e-10, 1, 1, 1, 1 )
tracks/10/type = "transform"
tracks/10/path = NodePath("Armature/Skeleton:bone_1")
tracks/10/interp = 1
tracks/10/loop_wrap = true
tracks/10/imported = true
tracks/10/enabled = true
tracks/10/keys = PoolRealArray( 0, 1, 0, 0, 0, 2.84217e-14, 0, 0, 1, 1, 1, 1, 0.8, 1, 0, 0, 0, 2.84217e-14, 0, 0, 1, 1, 1, 1 )
tracks/11/type = "value"
tracks/11/path = NodePath(".:translation")
tracks/11/interp = 1
tracks/11/loop_wrap = true
tracks/11/imported = false
tracks/11/enabled = true
tracks/11/keys = {
"times": PoolRealArray( 0, 0.26, 0.56, 0.8 ),
"transitions": PoolRealArray( 0.68302, 1.10957, 0.870551, 0.68302 ),
"update": 0,
"values": [ Vector3( 0, -0.097043, 0 ), Vector3( 0, -0.291129, 0 ), Vector3( 0, -0.201505, 0 ), Vector3( 0, -0.097043, 0 ) ]
}

[sub_resource type="Animation" id=5]
length = 0.9
loop = true
tracks/0/type = "transform"
tracks/0/path = NodePath("Armature/Skeleton:thigh_l")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = true
tracks/0/enabled = true
tracks/0/keys = PoolRealArray( 0, 1, -5.96046e-08, -2.68221e-07, 5.21541e-08, 0.17155, -0.00726903, 9.86722e-09, 0.985149, 1, 1, 1, 0.1, 1, -5.96046e-08, -2.68221e-07, 5.21541e-08, 0.0883258, -0.00374261, 1.44484e-08, 0.996085, 1, 1, 1, 0.2, 1, -5.96046e-08, -2.68221e-07, 5.21541e-08, 0.0265398, -0.00112457, 1.22825e-08, 0.999647, 1, 1, 1, 0.3, 1, -5.96046e-08, -2.68221e-07, 5.21541e-08, 0.0265405, -0.00112459, 1.24372e-09, 0.999647, 1, 1, 1, 0.4, 1, -5.96046e-08, -2.68221e-07, 5.21541e-08, 0.0883272, -0.00374266, -5.40537e-10, 0.996085, 1, 1, 1, 0.5, 1, -5.96046e-08, -2.68221e-07, 5.21541e-08, 0.255393, -0.0108217, -6.74329e-09, 0.966777, 1, 1, 1, 0.6, 1, -5.96046e-08, -2.68221e-07, 5.21541e-08, 0.323288, -0.0136986, -8.61241e-09, 0.946202, 1, 1, 1, 0.7, 1, -5.96046e-08, -2.68221e-07, 5.21541e-08, 0.344004, -0.0145764, 9.91977e-09, 0.938855, 1, 1, 1, 0.8, 1, -5.96046e-08, -2.68221e-07, 5.21541e-08, 0.29217, -0.01238, 7.9129e-09, 0.956286, 1, 1, 1, 0.9, 1, -5.96046e-08, -2.68221e-07, 5.21541e-08, 0.17155, -0.00726903, 9.86722e-09, 0.985149, 1, 1, 1 )
tracks/1/type = "transform"
tracks/1/path = NodePath("Armature/Skeleton:thigh_r")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = PoolRealArray( 0, 1, 2.98023e-08, -2.98023e-08, 2.98023e-08, -0.16124, -0.00683215, -5.32597e-08, 0.986892, 1, 1, 1, 0.1, 1, 2.98023e-08, -2.98023e-08, 2.98023e-08, -0.0830585, -0.00351942, -5.53141e-08, 0.996538, 1, 1, 1, 0.2, 1, 2.98023e-08, -2.98023e-08, 2.98023e-08, -0.0249783, -0.00105841, -5.55784e-08, 0.999687, 1, 1, 1, 0.3, 1, 2.98023e-08, -2.98023e-08, 2.98023e-08, -0.0249789, -0.00105842, -7.4238e-10, 0.999687, 1, 1, 1, 0.4, 1, 2.98023e-08, -2.98023e-08, 2.98023e-08, -0.0830598, -0.00351946, -2.62844e-10, 0.996538, 1, 1, 1, 0.5, 1, 2.98023e-08, -2.98023e-08, 2.98023e-08, -0.24013, -0.0101749, -2.39862e-10, 0.970687, 1, 1, 1, 0.6, 1, 2.98023e-08, -2.98023e-08, 2.98023e-08, -0.304245, -0.0128916, 4.8888e-09, 0.952507, 1, 1, 1, 0.7, 1, 2.98023e-08, -2.98023e-08, 2.98023e-08, -0.323876, -0.0137235, -5.4885e-08, 0.946, 1, 1, 1, 0.8, 1, 2.98023e-08, -2.98023e-08, 2.98023e-08, -0.274825, -0.011645, -5.40045e-08, 0.961424, 1, 1, 1, 0.9, 1, 2.98023e-08, -2.98023e-08, 2.98023e-08, -0.16124, -0.00683215, -5.32597e-08, 0.986892, 1, 1, 1 )

[sub_resource type="BoxShape" id=6]
extents = Vector3( 0.730386, 1.87015, 3.29827 )

[sub_resource type="SpatialMaterial" id=7]
flags_transparent = true
flags_unshaded = true
albedo_texture = ExtResource( 5 )

[sub_resource type="PlaneMesh" id=8]
material = SubResource( 7 )
size = Vector2( 1, 1 )

[sub_resource type="Curve" id=9]
_data = [ Vector2( 0, 0.918182 ), 0.0, 0.374825, 0, 0, Vector2( 0.970149, 0.118182 ), -2.74091, 0.0, 0, 0 ]

[node name="player" type="Spatial"]
script = ExtResource( 1 )

[node name="playerMesh" parent="." instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -0.097043, 0 )

[node name="BezierCurve" parent="playerMesh/Armature/Skeleton" index="0"]
material_override = SubResource( 2 )

[node name="AnimationPlayer" parent="playerMesh" index="1"]
anims/dive = SubResource( 3 )
anims/swim = SubResource( 4 )
anims/swimDiving = SubResource( 5 )

[node name="Area" type="Area" parent="playerMesh"]

[node name="CollisionShape" type="CollisionShape" parent="playerMesh/Area"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.155085, 0 )
shape = SubResource( 6 )

[node name="CPUParticles" type="CPUParticles" parent="playerMesh"]
transform = Transform( 1, 0, 0, 0, -1.62921e-07, -1, 0, 1, -1.62921e-07, 0, 4.40287, 0 )
emitting = false
amount = 15
speed_scale = 2.0
explosiveness = 0.37
randomness = 0.13
local_coords = false
mesh = SubResource( 8 )
emission_shape = 1
emission_sphere_radius = 1.0
direction = Vector3( 0, 0, -1 )
spread = 0.0
gravity = Vector3( 0, 0, 0 )
initial_velocity = 10.0
damping = 5.0
scale_amount_curve = SubResource( 9 )

[node name="camPos" type="Position3D" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -6.927, 36.105 )

[node name="ui" parent="." instance=ExtResource( 4 )]
[connection signal="animation_finished" from="playerMesh/AnimationPlayer" to="." method="_on_AnimationPlayer_animation_finished"]
[connection signal="area_entered" from="playerMesh/Area" to="." method="_on_Area_area_entered"]

[editable path="playerMesh"]

[editable path="ui"]
